# TradeManagementSystem

./: .env  Cargo.toml  README.md  install.sh  trades.db
migrations/2023-08-13-014914_create/: down.sql  up.sql
src/: db.rs  main.rs  services.rs  utils.rs
src/components/: mod.rs
src/components/api/: handlers.rs  middleware.rs  routes.rs
src/db/: models.rs  schema.rs  trade_test.rs  user_test.rs  wallet_test.rs
src/db/models/: trade.rs  trade_test.rs  user.rs  wallet.rs
src/middleware/: jwt_guard.rs
src/services/: jwt.rs  trade.rs  user.rs
src/utils/: date.rs  hash.rs
