[package]
name = "trade_management_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-service = "2.0.2"
actix-web = "4"
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1.0", features = ["sqlite", "uuidv07", "chrono"] }
dotenv = "0.15.0"
futures-util = "0.3.28"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
uuid = { version = "1.4.1", features = ["serde", "v4"] }

